F/fix the gap in the top

--- a/src/assets/styles/cmps/AppHeader.scss
+++ b/src/assets/styles/cmps/AppHeader.scss
@@ -4,10 +4,12 @@
     // justify-content: space-between;
     background-color: clear;
     // padding: 10px;
-    position: sticky;
+    position: fixed;
     z-index: 999;
     top: 0;
-    margin-bottom: 11px;
+    left: 0;
+    width: 100%;
+    // margin-top: 10px;
 
     &.white-background {
         background-color: white;
