--- a/src/assets/styles/cmps/HomePage.scss
+++ b/src/assets/styles/cmps/HomePage.scss
@@ -1,6 +1,6 @@
 .main {
     position: relative;
-    top: -16%;
+    // top: -16%;
 }
 .image-slides-container {
     position: relative;
